--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section class="header-body" id="header">
       <div class="hero-text-box">
-        Hi i'm Elvis 👋
+        Hi I'm Elvis 👋
         <p>I'm a Junior Front End developer</p>
       </div>
       <a href="#"></a>
@@ -52,7 +52,7 @@
     <section class="about" id="about">
       <h2>About</h2>
       <p>
-        Hello again i'm A junior front-end developer. My job is to develop ideas
+        Hello again I'm A junior front-end developer. My job is to develop ideas
         and design concepts for later on transform into reality. I mostly use my
         skills to develop websites and applications, solve problems and make
         life easier in general.
